# DlsBot

./: .env  .env.dev  .env.prod  README.md  all.txt  bot.py  pyproject.toml  start.bat
api/: __init__.py  pic.py
db/: __init__.py
src/plugins/: auto_agree.py  auto_group_daka.py  auto_read.py  auto_sushe_clean.py  auto_zzb.py  ban_all_message.py  ksj.py  link_db_plugin.py  yunqi.py
src/plugins/aProxy/: __init__.py
src/plugins/atrust/: __init__.py  bean.py  browser.py  main.py  tool.py
src/plugins/frp/: __init__.py  utils.py
src/plugins/he_suan/: __init__.py  test.py
src/plugins/help/: __init__.py
src/plugins/key_value/: __init__.py
src/plugins/xfb/: __init__.py  dfjl_tool.py  func.py  getInfo.py  moneyTool.py  payElect.py  tool.py
src/plugins/xfb/auto_xfb/: __init__.py  bean.py
src/plugins/xfb/template/: echarts.min.js  show.html
